fix: time range widget on narrow screen

--- a/src/tiddlywiki-calendar/tiddlywiki-ui/popup/CreateNewTiddlerPopup/CreateNewTiddlerPopup.css
+++ b/src/tiddlywiki-calendar/tiddlywiki-ui/popup/CreateNewTiddlerPopup/CreateNewTiddlerPopup.css
@@ -8,9 +8,6 @@
 .tw-calendar-layout-create-new-tiddler-popup .tw-calendar-title-input {
   width: 100%;
 }
-.tw-calendar-layout-create-new-tiddler-popup .tw-calendar-time-range-preview {
-  margin-top: 15px;
-}
 .tw-calendar-layout-create-new-tiddler-popup {
   margin: 10px 0;
 }
